stop bg load bar from shifting activity

--- a/app/css/base.css
+++ b/app/css/base.css
@@ -234,7 +234,7 @@ a:active {
 }
 .s-tabbar-activity {
   position: absolute;
-  top: -30px;
+  bottom: 56px;
   right: 0;
 }
 .x-tab-bar *[data-tab-bar="true"] {
