--- a/app/css/main.less
+++ b/app/css/main.less
@@ -242,7 +242,7 @@ a:active{
 
 .s-tabbar-activity{
     position: absolute;
-    top: -30px;
+    bottom: @tabBarHeight;
     right: 0;
 }
 
