--- a/theme/snapr/css/main.less
+++ b/theme/snapr/css/main.less
@@ -731,7 +731,7 @@ a:active{
         min-height: @fontSizeSmall;
         height: 28px;
         position: absolute;
-        top: -28px;
+        bottom: @tabBarHeight - 1px;
         right:0;
         margin:0;
         white-space: nowrap;
